some more updates on patient, org, etc.

--- a/fhir.html
+++ b/fhir.html
@@ -136,7 +136,8 @@
             <button id="button-template2">template 2</button> -->
             <button id="button-template1">patient</button>
             <button id="button-template2">allergies</button>
-            <button id="button-template3">medication Rx</button>            
+            <button id="button-template3">medication Rx</button> 
+            <button id="button-template4">Organizations</button>            
             <button id="button-generate">generate!</button>
         </div>
         <!--h1>Result</h1-->
