Additional work on orgs and practitioners

--- a/fhir.html
+++ b/fhir.html
@@ -134,10 +134,11 @@
         <div class="buttons">
 <!--        <button id="button-template1">template 1</button>
             <button id="button-template2">template 2</button> -->
-            <button id="button-template1">patient</button>
-            <button id="button-template2">allergies</button>
-            <button id="button-template3">medication Rx</button> 
-            <button id="button-template4">Organizations</button>            
+            <button id="button-template1">Patient</button>
+            <button id="button-template2">Allergies</button>
+            <button id="button-template3">Medication Rx</button>
+            <button id="button-template4">Organizations</button>
+            <button id="button-template5">Practioners</button>
             <button id="button-generate">generate!</button>
         </div>
         <!--h1>Result</h1-->
